--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,6 @@ plugins:
 # Custom vars
 version:             1.1.0
 google_analytics_id: #UA-XXXX-Y
+
+# Google Analytics
+google_analytics: UA-117878188-2
