--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:               Christopher Zou
 tagline:             student at UC Berkeley
 description:         a site for blogging, teaching, a portfolio, and thoughts given structure
-url:
-baseurl:             ''
+url:                 chriswzou.github.io
+baseurl:             /blog
 paginate:            5
 permalink:           pretty
 paginate_path:       /posts/page:num/
