--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               Christopher Zou
 tagline:             student at UC Berkeley
 description:         a site for blogging, teaching, a portfolio, and thoughts given structure
-url:                 chriswzou.github.io/blog
+url:                 
 baseurl:             ''
 paginate:            5
 permalink:           pretty
