Add in base url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               Christopher Zou
 tagline:             student at UC Berkeley
 description:         a site for blogging, teaching, a portfolio, and thoughts given structure
 url:                 chriswzou.github.io
-baseurl:             /blog
+baseurl:             blog
 paginate:            5
 permalink:           pretty
 paginate_path:       /posts/page:num/
